big mobile responsiv Update

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,7 +5,7 @@
         </div>
     </div>
     <div class="contact-main-container">
-        <div class="contact-form"  id="contactSection">
+        <div class="contact-form" id="contactSection">
             <h3>Want to discuss a new project?</h3>
             <p>Say hello! let's discuss your ideas and make it happen</p>
             <div class="input-container">
@@ -16,36 +16,38 @@
                             placeholder="Your name" (focus)='nameFocus = true' (focusout)='nameFocus = false'
                             minlength="4" required>
                         <div class="status-img-container">
-                            <img *ngIf="name.invalid && (name.dirty || name.touched)" src="./../../assets/img/contact/error.png">
+                            <img *ngIf="name.invalid && (name.dirty || name.touched)"
+                                src="./../../assets/img/contact/error.png">
                             <img *ngIf="name.valid" src="./../../assets/img/contact/ok.png">
                         </div>
                     </div>
 
                     <div class="error-message-container" [ngClass]="{'error-active': name.invalid &&
                             (name.dirty || name.touched)}">
-                            <div class="error-message-active" *ngIf="name.invalid &&
+                        <div class="error-message-active" *ngIf="name.invalid &&
                             (name.dirty || name.touched)">
-                                Your name is required
-                            </div>
+                            Your name is required
                         </div>
+                    </div>
 
                     <div class="befor-container" [ngClass]="{'input-focus input-email': emailFocus}">
                         <input #email="ngModel" [(ngModel)]="contactData.email" class="email" type="email" name="email"
                             placeholder="Your email" (focus)='emailFocus = true' (focusout)='emailFocus = false'
                             pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" required>
                         <div class="status-img-container">
-                            <img *ngIf="email.invalid && (email.dirty || email.touched)" src="./../../assets/img/contact/error.png">
+                            <img *ngIf="email.invalid && (email.dirty || email.touched)"
+                                src="./../../assets/img/contact/error.png">
                             <img *ngIf="email.valid" src="./../../assets/img/contact/ok.png">
                         </div>
                     </div>
 
                     <div class="error-message-container" [ngClass]="{'error-active':email.invalid &&
                             (email.dirty || email.touched)}">
-                            <div class="error-message-active" *ngIf="email.invalid &&
+                        <div class="error-message-active" *ngIf="email.invalid &&
                             (email.dirty || email.touched)">
-                                Your email is required
-                            </div>
+                            Your email is required
                         </div>
+                    </div>
 
                     <div class="befor-container" [ngClass]="{'input-focus input-message': messageFocus}">
                         <div class="pull-tab"></div>
@@ -53,43 +55,53 @@
                             name="message" placeholder="Your message" (focus)='messageFocus = true'
                             (focusout)='messageFocus = false' minlength="10" required></textarea>
                         <div class="status-img-container">
-                            <img *ngIf="message.invalid && (message.dirty || message.touched)" src="./../../assets/img/contact/error.png">
+                            <img *ngIf="message.invalid && (message.dirty || message.touched)"
+                                src="./../../assets/img/contact/error.png">
                             <img *ngIf="message.valid" src="./../../assets/img/contact/ok.png">
                         </div>
                     </div>
-                        
-                        <div class="error-message-container" [ngClass]="{'error-active': message.invalid &&
+
+                    <div class="error-message-container" [ngClass]="{'error-active': message.invalid &&
                                 (message.dirty || message.touched)}">
-                            <div class="error-message-active" *ngIf="message.invalid &&
+                        <div class="error-message-active" *ngIf="message.invalid &&
                                 (message.dirty || message.touched)">
-                                Your message is empty
-                            </div>
+                            Your message is empty
                         </div>
+                    </div>
 
                     <div class="privacy-policy-box">
                         <div class="agree-hover" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
                             <label class="agree-box">
-                                <input #privatePolicy="ngModel" type="checkbox" [(ngModel)]="contactData.privatPolicy" name="privatPolicy"
-                                    required>
+                                <input #privatePolicy="ngModel" type="checkbox" [(ngModel)]="contactData.privatPolicy"
+                                    name="privatPolicy" required>
                                 <span class="checkmark"></span>
                             </label>
                         </div>
-                        <p>I've read the</p>
-                        <div class="privacy-policy-link"><a [ngClass]="{'hovered': isHovered}" href="#">privacy
+
+                        <p>I've read the
+                            <a [ngClass]="{'hovered': isHovered}" href="#">privacy
                                 policy</a>
-                        </div>
-                        <p> and agree to the processing of my data as outlined.</p>
+                            and agree to the processing of my data as outlined.
+                        </p>
                     </div>
+                    
                     <div class="button-container">
-                        <button [ngClass]="{'active': name.valid &&email.valid && message.valid && privatePolicy.valid}" type="submit">Send Message</button>
+                        <button [ngClass]="{'active': name.valid &&email.valid && message.valid && privatePolicy.valid}"
+                            type="submit">Send Message</button>
                     </div>
 
                     <div class="arrow-up-container">
-                        <div class="arrow-up" (mouseenter)="onMouseEnter()"
-                        (mouseleave)="onMouseOut()" (click)="scrollToArea('headerUp')">
-                            <div class="line" [ngClass]="{'hover-up-line': linkAnimationStates['arrowUp']?.enter, 'reset-down-line': linkAnimationStates['arrowUp']?.leave}"></div>
-                            <div class="line" [ngClass]="{'hover-up-line-vertival': linkAnimationStates['arrowUp']?.enter, 'reset-down-line-vertival': linkAnimationStates['arrowUp']?.leave}"></div>
-                            <div class="line" [ngClass]="{'hover-up-line-vertival': linkAnimationStates['arrowUp']?.enter, 'reset-down-line-vertival': linkAnimationStates['arrowUp']?.leave}"></div>
+                        <div class="arrow-up" (mouseenter)="onMouseEnter()" (mouseleave)="onMouseOut()"
+                            (click)="scrollToArea('headerUp')">
+                            <div class="line"
+                                [ngClass]="{'hover-up-line': linkAnimationStates['arrowUp']?.enter, 'reset-down-line': linkAnimationStates['arrowUp']?.leave}">
+                            </div>
+                            <div class="line"
+                                [ngClass]="{'hover-up-line-vertival': linkAnimationStates['arrowUp']?.enter, 'reset-down-line-vertival': linkAnimationStates['arrowUp']?.leave}">
+                            </div>
+                            <div class="line"
+                                [ngClass]="{'hover-up-line-vertival': linkAnimationStates['arrowUp']?.enter, 'reset-down-line-vertival': linkAnimationStates['arrowUp']?.leave}">
+                            </div>
                         </div>
                     </div>
 
