--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -1,33 +1,12 @@
 .skill-container {
   width: 90%;
-  position: relative;
   display: flex;
   justify-content: center;
   padding-top: 50px;
-
-  .skill-text {
-    position: absolute;
-    top: -1px;
-    width: 560px;
-    height: 100px;
-    background-color: #FFFCF3;
-
-    h2 {
-      font-family: Syne;
-      font-size: 78px;
-      font-weight: 800;
-      text-align: center;
-      margin: 0;
-
-      &:hover {
-        transition: color 0.190s ease-in-out;
-        color: #00BC8F;
-      }
-    }
-  }
 }
 
 .border {
+  position: relative;
   border: 4px solid black;
   display: flex;
   flex-wrap: wrap;
@@ -35,103 +14,185 @@
   align-items: center;
   padding: 100px 70px 40px 70px;
   max-width: 1300px;
+}
 
-  div {
-    margin: 50px 70px 50px 70px;
-    width: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 85px;
-    overflow: hidden;
+.skill-text {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 0px;
+  left: 50%;
+  background-color: #FFFCF3;
+  white-space: nowrap;
 
-    p {
-      font-family: Overpass;
-      font-size: 16px;
-      font-weight: 700;
-      text-align: center;
-    }
+
+  h2 {
+    font-family: Syne;
+    font-size: 78px;
+    font-weight: 800;
+    text-align: center;
+    margin: 0;
+    padding: 0 20px;
 
     &:hover {
-      img {
-        animation: circle-animation 0.27s forwards linear;
-      }
-
-      p {
-        transition: color 0.190s ease-in-out;
-        color: #00BC8F;
-      }
-    }
-
-    @keyframes circle-animation {
-      0% {
-        transform: translateX(0) scale(1);
-      }
-
-      12% {
-        transform: translateX(25px) scale(0.9);
-      }
-
-      25% {
-        transform: translateX(50px) scale(0.8);
-      }
-
-      37% {
-        transform: translateX(25px) scale(0.6);
-      }
-
-      50% {
-        transform: translateX(0px) scale(0.4);
-      }
-
-      62% {
-        transform: translateX(-25px) scale(0.6);
-      }
-
-      75% {
-        transform: translateX(-50px) scale(0.8);
-      }
-
-      87% {
-        transform: translateX(-25px) scale(0.9);
-      }
-
-      100% {
-        transform: translateX(0px) scale(1);
-      }
+      transition: color 0.190s ease-in-out;
+      color: #00BC8F;
     }
   }
 }
 
-@media (max-width: 1024px) {}
+.skill-icons {
+  margin: 50px 70px 50px 70px;
+  width: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 85px;
+  overflow: hidden;
 
-@media (max-width: 915px) {
+  p {
+    font-family: Overpass;
+    font-size: 16px;
+    font-weight: 700;
+    text-align: center;
+  }
 
-  .skill-container {
-    width: 90%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    padding-top: 5.464vw;
+  &:hover {
+    img {
+      animation: circle-animation 0.27s forwards linear;
+    }
 
-    .skill-text {
-      position: absolute;
-      top: -1px;
-      width: 61.2vw;
-      height: 100px;
-
-      h2 {
-        font-size: 8.533vw;
-      }
+    p {
+      transition: color 0.190s ease-in-out;
+      color: #00BC8F;
     }
   }
 
-  .border {
-    padding: 12% 5.5% 4.8% 5.5%;
-
-    div {
-      margin: 6% 6% 6% 6%;
-      width: 85px;
+  @keyframes circle-animation {
+    0% {
+      transform: translateX(0) scale(1);
     }
+
+    12% {
+      transform: translateX(25px) scale(0.9);
+    }
+
+    25% {
+      transform: translateX(50px) scale(0.8);
+    }
+
+    37% {
+      transform: translateX(25px) scale(0.6);
+    }
+
+    50% {
+      transform: translateX(0px) scale(0.4);
+    }
+
+    62% {
+      transform: translateX(-25px) scale(0.6);
+    }
+
+    75% {
+      transform: translateX(-50px) scale(0.8);
+    }
+
+    87% {
+      transform: translateX(-25px) scale(0.9);
+    }
+
+    100% {
+      transform: translateX(0px) scale(1);
+    }
+  }
+}
+
+
+@media (max-width: 1024px) {
+
+  h2 {
+    animation: pulse 3s infinite ease-in-out;
+  }
+
+  @keyframes pulse {
+    10% {
+      color: black;
+    }
+
+    25% {
+      color: #00BC8F;
+    }
+
+    75% {
+      color: #00BC8F;
+    }
+
+    90% {
+      color: black;
+    }
+  }
+}
+
+
+@media (max-width: 915px) {
+
+  .border {
+    padding: 10% 2% 4% 2%;
+  }
+
+  .skill-icons {
+    margin: 7% 8%;
+  }
+}
+
+
+@media (max-width: 690px) {
+
+  .border {
+    padding: 8% 4% 0 4%;
+  }
+
+  .skill-icons {
+    margin: 5% 6%;
+  }
+
+  h2 {
+    font-size: 45px !important;
+  }
+}
+
+
+@media (max-width: 490px) {
+
+  .border {
+    padding: 10% 2% 0 2%;
+  }
+
+  .skill-icons {
+    margin: 3% 4%;
+    width: 85px;
+
+    img {
+      width: 60px;
+    }
+  }
+
+  h2 {
+    font-size: 35px !important;
+  }
+}
+
+
+@media (max-width: 400px) {
+
+  .border {
+    padding: 12% 0 0 0;
+  }
+
+  .skill-icons {
+    margin: 1% 2%;
+  }
+
+  h2 {
+    font-size: 35px !important;
   }
 }
