--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -14,140 +14,212 @@
             color: #00BC8F;
         }
     }
+}
 
-    .introduction-info {
-        display: flex;
-        justify-content: space-between;
+.introduction-info {
+    display: flex;
+    justify-content: space-between;
+}
 
-        .introduction-text {
-            display: flex;
-            flex-direction: column;
-            width: 50%;
-            // height: 530px;
+.introduction-text {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
 
-            div:first-child {
-                span {
-                    font-family: Overpass;
-                    font-size: 23px;
-                    text-align: left;
-                    // height: 50%;
-                }
-            }
-
-            .button-container {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 50%;
-
-                button {
-                    width: 213px;
-                    height: 68px;
-                    font-family: Overpass;
-                    font-size: 23px;
-                    font-weight: 400;
-                    border: 4px solid black;
-                    transition: 0.1s ease-out;
-                    background-color: #FFFCF3;
-
-                    &:hover {
-                        width: 268px;
-                        font-weight: 700;
-                    }
-
-                    &:active {
-                        background-color: black;
-                        color: #FFFCF3;
-                        width: 268px;
-                        font-weight: 400;
-                    }
-                }
-            }
-        }
-    }
-
-    .about-img {
-        position: relative;
-        margin-right: 20px;
-
-        &::before {
-            content: attr(href);
-            position: absolute;
-            border: 4px solid black;
-            top: 20px;
-            left: 20px;
-            width: 526px;
-            height: 526px;
-            opacity: 0.0;
-            transition: opacity 0.19s ease-in-out;
-        }
-
-
-        &:hover::before {
-            opacity: 1;
-        }
-
-        img {
-            height: 530px;
+    div:first-child {
+        span {
+            font-family: Overpass;
+            font-size: 23px;
+            text-align: left;
         }
     }
 }
+
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+
+    button {
+        width: 213px;
+        height: 68px;
+        font-family: Overpass;
+        font-size: 23px;
+        font-weight: 400;
+        border: 4px solid black;
+        transition: 0.1s ease-out;
+        background-color: #FFFCF3;
+
+        &:hover {
+            width: 268px;
+            font-weight: 700;
+        }
+
+        &:active {
+            background-color: black;
+            color: #FFFCF3;
+            width: 268px;
+            font-weight: 400;
+        }
+    }
+}
+
+.about-img {
+    position: relative;
+    margin-right: 20px;
+
+    &::before {
+        content: attr(href);
+        position: absolute;
+        border: 4px solid black;
+        top: 20px;
+        left: 20px;
+        width: 526px;
+        height: 526px;
+        opacity: 0.0;
+        transition: opacity 0.19s ease-in-out;
+    }
+
+
+    &:hover::before {
+        opacity: 1;
+    }
+
+    img {
+        height: 530px;
+    }
+}
+
 
 @media (max-width: 1350px) {
 
     .introduction-container {
+        align-items: center;
+    }
+
+    .introduction-info {
+        justify-content: unset;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .introduction-text {
+        width: 612px !important;
+    }
+
+    .button-container {
+        margin-top: 10%;
+    }
+
+    .about-img {
+        margin-top: 10%;
+        margin-right: 0px;
+
+        &::before {
+            width: 100%;
+            height: 100%;
+        }
+
+        img {
+            height: 590px;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+
+    .button-container {
+        display: none;
+    }
+
+    .introduction-container {
         h2 {
-            font-size: 5.78vw;
+            animation: pulse 3s infinite ease-in-out;
+        }
+    }
+
+    @keyframes pulse {
+        10% {
+            color: black;
         }
 
-        .introduction-info {
-            .introduction-text {
-                div:first-child {
-                    span {
-                        font-family: Overpass;
-                        font-size: 23px;
-                        text-align: left;
-                    }
-                }
-
-                .button-container {
-                    button {
-                        width: 213px;
-                        height: 68px;
-                        font-family: Overpass;
-                        font-size: 23px;
-                        font-weight: 400;
-                        border: 4px solid black;
-                        transition: 0.1s ease-out;
-                        background-color: #FFFCF3;
-
-                        &:hover {
-                            width: 268px;
-                            font-weight: 700;
-                        }
-
-                        &:active {
-                            background-color: black;
-                            color: #FFFCF3;
-                            width: 268px;
-                            font-weight: 400;
-                        }
-                    }
-                }
-            }
+        25% {
+            color: #00BC8F;
         }
 
-        .about-img {
-            &::before {
-                width: 100%;
-                height: 100%;
-            }
+        75% {
+            color: #00BC8F;
+        }
 
-            img {
-                height: 39.2vw;
+        90% {
+            color: black;
+        }
+    }
+
+    .about-img {
+        &::before {
+            opacity: 1.0;
+            animation: pulse-img 3s infinite ease-in-out;
+        }
+
+        @keyframes pulse-img {
+            10% {
+                opacity: 1.0;
+            }
+    
+            25% {
+                opacity: 0.0;
+            }
+    
+            75% {
+                opacity: 0.0;
+            }
+    
+            90% {
+                opacity: 1.0;
             }
         }
     }
 }
 
-@media (max-width: 1024px) {}
+@media (max-width: 690px) {
+
+    .introduction-container {
+        h2 {
+            font-size: 45px;
+        }
+    }
+
+    .introduction-text {
+        width: 355px !important;
+    }
+
+    .about-img {
+
+        img {
+            height: 355px;
+        }
+    }
+}
+
+@media (max-width: 400px) {
+
+    .introduction-container {
+        h2 {
+            font-size: 35px;
+        }
+    }
+
+    .introduction-text {
+        width: 280px !important;
+    }
+
+    .about-img {
+
+        img {
+            height: 280px;
+        }
+    }
+}
