--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,6 +1,8 @@
 .contact-container {
     width: 100%;
     background-color: #FFFCF3;
+    display: flex;
+    flex-direction: column;
 
     .menu-footer-content {
         clip-path: polygon(0 0, 100% 50%, 100% 100%, 0% 100%);
@@ -79,7 +81,14 @@
                     width: 100%;
 
                     .pull-tab {
-                        display: none;
+                        height: 30px;
+                        width: 30px;
+                        position: absolute;
+                        bottom: 5px;
+                        right: -7px;
+                        pointer-events: none;
+                        background: url("./../../assets/img/contact/resizer.png") no-repeat scroll right 15px center;
+                        z-index: 2;                        
                     }
 
                     input,
@@ -87,7 +96,7 @@
                         position: relative;
                         outline: none;
                         max-width: 617px;
-                        width: calc(100% - 85px);
+                        width: calc(100% - 93px);
                         padding: 15px 60px 15px 25px;
                         margin-bottom: 2.5px;
                         border-bottom: 2px solid #FFFCF3;
@@ -219,12 +228,7 @@
                 font-size: 14px;
                 font-weight: 400;
                 color: #FFFCF3;
-            }
-
-            .privacy-policy-link {
-                width: 105px;
-                display: flex;
-                justify-content: center;
+                text-align: start;
 
                 a {
                     font-family: Overpass;
@@ -232,9 +236,11 @@
                     font-weight: 400;
                     text-decoration: none;
                     color: #00BC8F;
+                    padding: 0 6px;
 
                     &:hover {
                         font-weight: 800;
+                        padding: 0 2.8px;
                     }
                 }
             }
@@ -325,6 +331,7 @@
 
 .hovered {
     font-weight: 800 !important;
+    padding: 0 2.8px !important;
 }
 
 .input-focus::after {
@@ -427,15 +434,21 @@
     }
 }
 
-@media (max-width: 1024px) {
-    .greet {
-        width: 90%;
-        display: flex;
-        justify-content: flex-start;
-        padding-bottom: 50px;
+
+@media (max-width: 690px) {
     
+    .greet {
         h2 {
             font-size: 45px;
         }
     }
+
+    .pull-tab {
+        display: none;
+    }
+}
+
+@media (max-width: 400px) {
+    
+
 }
