--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,7 +26,11 @@
                 <div>
                     <a>Legal Notice</a>
                 </div>
-
+            </div>
+        </div>
+        <div class="legal-notice-responsiv">
+            <div>
+                <a>Legal Notice</a>
             </div>
         </div>
     </div>
