--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -6,104 +6,110 @@
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
+}
 
-    .footer-container {
-        width: 90%;
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
+.footer-container {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
 
-        .footer-left {
-            display: flex;
-            flex-direction: column;
+}
 
-            img {
-                cursor: pointer;
-                height: 30px;
-                width: 48.5px;
-                filter: brightness(0) saturate(100%) invert(100%) sepia(4%) saturate(78%) hue-rotate(120deg) brightness(112%) contrast(100%);
-                padding-bottom: 20px;
-            }
+.footer-left {
+    display: flex;
+    flex-direction: column;
 
-            span {
-                font-family: Poppins;
-                color: #FFFCF3;
-                font-size: 23px;
-            }
+    img {
+        cursor: pointer;
+        height: 30px;
+        width: 48.5px;
+        filter: brightness(0) saturate(100%) invert(100%) sepia(4%) saturate(78%) hue-rotate(120deg) brightness(112%) contrast(100%);
+        padding-bottom: 20px;
+    }
+
+    span {
+        font-family: Poppins;
+        color: #FFFCF3;
+        font-size: 23px;
+    }
+
+}
+
+.footer-right {
+    display: flex;
+    flex-direction: column;
+}
+
+.links {
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+
+    a {
+        cursor: pointer;
+
+        img {
+            height: 40px;
+            padding-bottom: 0;
+            padding-top: 10px;
+        }
+    }
+}
+
+.legal-notice,
+.legal-notice-responsiv {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    cursor: pointer;
+    padding-top: 20px;
+
+    div {
+        position: relative;
+
+        &::before {
+            content: attr(href);
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            border-bottom: 2px solid #00BC8F;
+            width: 0;
+            opacity: 0;
+        }
+
+        &:hover::before {
+            animation: border-animation 0.2s ease-out;
+            animation-fill-mode: forwards;
 
         }
 
-        .footer-right {
+        &:active::before {
+            bottom: 0 !important;
+            left: 0 !important;
+            height: 170px !important;
+            width: 600px !important;
+            border: 4px solid black;
+        }
 
+        a {
+            font-size: 16px;
+            font-family: Overpass;
+            color: #FFFCF3;
+            text-decoration: none;
+            padding-right: 2px;
 
-            .links {
-                width: 200px;
-                display: flex;
-                justify-content: space-between;
-                align-items: flex-end;
-
-                a {
-                    cursor: pointer;
-
-                    img {
-                        height: 40px;
-                        padding-bottom: 0;
-                        padding-top: 10px;
-                    }
-                }
-            }
-
-            .legal-notice {
-                width: 100%;
-                display: flex;
-                justify-content: flex-end;
-                position: relative;
-                cursor: pointer;
-                padding-top: 20px;
-
-                div {
-                    position: relative;
-
-                    &::before {
-                        content: attr(href);
-                        position: absolute;
-                        bottom: 0;
-                        left: 0;
-                        border-bottom: 2px solid #00BC8F;
-                        width: 0;
-                        opacity: 0;
-                    }
-
-                    &:hover::before {
-                        animation: border-animation 0.2s ease-out;
-                        animation-fill-mode: forwards;
-
-                    }
-
-                    &:active::before {
-                        bottom: 0 !important;
-                        left: 0 !important;
-                        height: 170px !important;
-                        width: 600px !important;
-                        border: 4px solid black;
-                    }
-
-                    a {
-                        font-size: 16px;
-                        font-family: Overpass;
-                        color: #FFFCF3;
-                        text-decoration: none;
-                        padding-right: 2px;
-
-                        &:hover {
-                            font-weight: 700;
-                            padding-right: 0;
-                        }
-                    }
-                }
+            &:hover {
+                font-weight: 700;
+                padding-right: 0;
             }
         }
     }
+}
+
+.legal-notice-responsiv {
+    display: none;
 }
 
 .hover-link {
@@ -153,4 +159,35 @@
     }
 }
 
-@media (max-width: 1024px) {}
+@media (max-width: 690px) {
+
+    .footer-container {
+        width: 90%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+    
+    }
+
+    .footer-left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        order: 2;
+    }
+
+    .footer-right {
+        order: 1;
+        padding-bottom: 20px;
+    }
+
+    .legal-notice-responsiv {
+        display: flex;
+        order: 2;
+    }
+
+    .legal-notice {
+        display: none;
+    }
+}
