--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,13 +1,11 @@
 <div id="mySkills" class="skill-container">
-    <div #arrowTrigger class="skill-text">
-        <h2>My skills</h2> 
-    </div>
     <div class="border">
-        <div *ngFor="let skill of ['Angular', 'TypeScript', 'JavaScript', 'HTML', 'CSS', 'Firebase', 'Git', 'Scrum', 'Rest-Api', 'Material Design'] ">
+        <div #arrowTrigger class="skill-text">
+            <h2>My skills</h2> 
+        </div>
+        <div class="skill-icons" *ngFor="let skill of ['Angular', 'TypeScript', 'JavaScript', 'HTML', 'CSS', 'Firebase', 'Git', 'Scrum', 'Rest-Api', 'Material Design'] ">
             <img src="./assets/img/{{  skill }}.png">
             <p>{{ skill }}</p>
         </div>
     </div>
 </div>
-
-
