--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -7,13 +7,16 @@
   <div class="portfolio-list">
     <div *ngFor="let item of items; let i = index" [class.project]="i % 2 === 0"
       [class.project-reverse]="i % 2 === 1">
+      <div id="countResponsiv" [class.count]="i % 2 === 0" [class.count-reverse]="i % 2 === 1">
+        0{{ i + 1 }}/0{{ items.length }}
+      </div>
       <div [class.image]="i % 2 === 0" [class.image-reverse]="i % 2 === 1">
         <img class="preview-img" src="{{ item.image }}" alt="Bild {{ i + 1 }}">
         <img [class.pointer]="i % 2 === 0" [class.pointer-reverse]="i % 2 === 1"
         src=".\assets\img\portfolio-img\pointer.png" alt="">
       </div>
       <div [class.text]="i % 2 === 0" [class.text-reverse]="i % 2 === 1">
-        <div [class.count]="i % 2 === 0" [class.count-reverse]="i % 2 === 1">
+        <div id="count" [class.count]="i % 2 === 0" [class.count-reverse]="i % 2 === 1">
           0{{ i + 1 }}/0{{ items.length }}
         </div>
         <div [class.description]="i % 2 === 0" [class.description-reverse]="i % 2 === 1">
