--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -117,7 +117,6 @@
   @extend .image-base;
 
   &::before {
-    border: 4px solid black;
     left: 20px;
   }
 }
@@ -126,13 +125,11 @@
   @extend .image-base;
 
   &::before {
-    border: 4px solid black;
     right: 20px;
   }
 }
 
 .preview-img {
-  flex: 1;
   width: 100%;
   position: relative;
   z-index: 1;
@@ -305,13 +302,10 @@
 
   .pointer {
     right: -1.58vw;
-    transform: translate(+50%, -50%) rotate(135deg);
   }
 
   .pointer-reverse {
-    @extend .pointer-base;
     left: -1.58vw;
-    transform: translate(-50%, -50%) rotate(135deg);
   }
 
   .text {
@@ -361,10 +355,12 @@
 
 @media (max-width: 1024px) {
 
-  h2 {
-    // font-size:  8.533vw !important;
-    margin: 20px 0 35px 0;
-    animation: pulse 3s infinite ease-in-out;
+  .portfolio-header {
+
+    h2 {
+      margin: 20px 0 35px 0;
+      animation: pulse 3s infinite ease-in-out;
+    }
   }
 
   @keyframes pulse {
@@ -385,13 +381,146 @@
     }
   }
 
-  p {
-    font-size: 23px;
+
+  .project-base {
+    flex-direction: column;
+
+    &:hover {
+
+      .pointer,
+      .pointer-reverse {
+        height: 4.56vw !important;
+        width: 4.56vw !important;
+      }
+    }
+  }
+
+  .image-base {
+    width: 720px;
+
+    &::before {
+      border: 4px solid black;
+      top: 20px;
+    }
+  }
+
+  .image {
+    margin-right: 24px;
+
+    &::before {
+      left: 20px;
+    }
+  }
+
+  .image-reverse {
+    margin-left: 24px;
+    
+    &::before {
+      right: 20px;
+    }
+  }
+
+  .preview-img {
+    width: 100%;
+  }
+
+  .pointer-base {
+    height: 48px;
+    width: 48px;
+  }
+
+  .pointer {
+    right: -26px;
+  }
+
+  .pointer-reverse {
+    left: -26px;
+  }
+
+  .text-base {
+    width: 100%;
+  }
+
+  .text {
+    padding-left: 0;
+  }
+
+  .text-reverse {
+    padding-right: 0;
+  }
+
+  #count {
+    display: none !important;
+  }
+
+  .count-base {
+    position: relative;
+    width: 100%;
+    display: flex;
+    font-size: 48px;
+    padding-bottom: 30px;
+  }
+
+  .count {
+    justify-content: flex-end;
+  }
+  
+  .count-reverse {
+    justify-content: flex-start;
+  }
+
+  .description-base {
+    padding-top: 30px;
+    width: 720px;
+
+    h3 {
+      font-size: 45px;
+    }
+
+    span {
+      font-size: 23px;
+    }
+
+    p {
+      font-size: 16px;
+    }
+  }
+
+  .github-link {
+    width: 189px;
+  height: 68px;
+  font-size: 23px;
+
+    &:hover {
+      width: 238px;
+    }
+
+    &:active {
+      width: 238px;
+    }
   }
 }
 
-@media (max-width: 630px) {
-  h2 {
-    font-size: 12.38vw !important;
+@media (max-width: 690px) {
+
+  .portfolio-header {
+    width: 306px;
+    margin-bottom: 60px;
+
+    h2 {
+      font-size: 45px !important;
+    }
+  }
+}
+
+
+@media (max-width: 400px) {
+
+  .portfolio-header {
+    width: 240px;
+
+    h2 {
+      font-size: 35px !important;
+    }
   }
 }
