--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -50,8 +50,7 @@
 
   &:hover {
 
-    .pointer,
-    .pointer-reverse {
+    .pointer-base {
       height: 75px !important;
       width: 75px !important;
       opacity: 1 !important;
@@ -137,8 +136,8 @@
 }
 
 .pointer-base {
-  height: 48px;
-  width: 48px;
+  height: 0px;
+  width: 0px;
   z-index: 3;
   position: absolute;
   top: 50%;
@@ -159,7 +158,6 @@
 }
 
 .text-base {
-  flex: 1;
   width: 50%;
   height: 100%;
   position: relative;
@@ -227,12 +225,12 @@
 
 .description {
   @extend .description-base;
-  transform: translate(-140%);
+  transform: translate(-124%) scale(0.8);
 }
 
 .description-reverse {
   @extend .description-base;
-  transform: translate(+140%);
+  transform: translate(+124%) scale(0.8);
 }
 
 .github-link {
@@ -240,8 +238,8 @@
   justify-content: center;
   align-items: center;
   border: 4px solid black;
-  width: 189px;
-  height: 68px;
+  width: 180px;
+  height: 60px;
   font-family: Overpass;
   font-size: 23px;
   font-weight: 400;
@@ -250,14 +248,14 @@
   color: black;
 
   &:hover {
-    width: 238px;
+    width: 230px;
     font-weight: 700;
   }
 
   &:active {
     background-color: black;
     color: #FFFCF3;
-    width: 238px;
+    width: 230px;
     font-weight: 400;
   }
 }
@@ -384,19 +382,29 @@
 
   .project-base {
     flex-direction: column;
+    width: 720px;
+    padding: 0;
 
     &:hover {
 
       .pointer,
       .pointer-reverse {
-        height: 4.56vw !important;
-        width: 4.56vw !important;
+        height: 75px !important;
+        width: 75px !important;
       }
     }
   }
 
+  .project {
+    margin: 0 24px 100px 0;
+  }
+
+  .project-reverse {
+    margin: 0 0 100px 24px;
+  }
+
   .image-base {
-    width: 720px;
+    width: 100%;
 
     &::before {
       border: 4px solid black;
@@ -405,16 +413,12 @@
   }
 
   .image {
-    margin-right: 24px;
-
     &::before {
       left: 20px;
     }
   }
 
   .image-reverse {
-    margin-left: 24px;
-    
     &::before {
       right: 20px;
     }
@@ -439,14 +443,19 @@
 
   .text-base {
     width: 100%;
+    height: 450px;
   }
 
   .text {
     padding-left: 0;
+    display: flex;
+    align-items: flex-start;
   }
 
   .text-reverse {
     padding-right: 0;
+    display: flex;
+    justify-content: flex-end;
   }
 
   #count {
@@ -457,14 +466,13 @@
     position: relative;
     width: 100%;
     display: flex;
-    font-size: 48px;
     padding-bottom: 30px;
   }
 
   .count {
     justify-content: flex-end;
   }
-  
+
   .count-reverse {
     justify-content: flex-start;
   }
@@ -472,6 +480,7 @@
   .description-base {
     padding-top: 30px;
     width: 720px;
+    transform: translateY(-100%) scale(0.8);
 
     h3 {
       font-size: 45px;
@@ -486,10 +495,22 @@
     }
   }
 
+  .description {
+    align-items: flex-start;
+  }
+
+  .description-reverse {
+    align-items: flex-end;
+
+    p {
+      text-align: right;
+    }
+  }
+
   .github-link {
     width: 189px;
-  height: 68px;
-  font-size: 23px;
+    height: 68px;
+    font-size: 23px;
 
     &:hover {
       width: 238px;
@@ -498,6 +519,17 @@
     &:active {
       width: 238px;
     }
+  }
+}
+
+@media (max-width: 920px) {
+
+  .project-base {
+    width: 520px;
+  }
+
+  .text-base {
+    height: 350px;
   }
 }
 
@@ -511,6 +543,69 @@
       font-size: 45px !important;
     }
   }
+
+  .project-base {
+    width: 300px;
+
+    &:hover {
+      .description-base {
+        opacity: 1;
+      }
+
+      .pointer-base {
+        height: 38px !important;
+        width: 38px !important;
+      }
+    }
+  }
+
+  .pointer-base {
+    height: 0px;
+    width: 0px;
+  }
+
+  .text-base {
+    height: 350px;
+  }
+
+  .count-base {
+    font-size: 23px;
+  }
+
+  .description-base {
+    padding-top: 30px;
+    transform: translateY(-80%) scale(0.8);
+    opacity: 0;
+
+    h3 {
+      font-size: 32px;
+      margin: 15px 0 15px 0;
+    }
+
+    span {
+      font-size: 23px;
+    }
+
+    p {
+      font-size: 16px;
+      margin: 15px 0 15px 0;
+    }
+  }
+
+  .github-link {
+    width: 140px;
+    height: 57px;
+    font-size: 23px;
+    margin: 15px 0 15px 0;
+
+    &:hover {
+      width: 238px;
+    }
+
+    &:active {
+      width: 238px;
+    }
+  }
 }
 
 
@@ -522,5 +617,9 @@
     h2 {
       font-size: 35px !important;
     }
+  }
+
+  .project-base {
+    width: 240px;
   }
 }
