--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -87,7 +87,7 @@
                         bottom: 5px;
                         right: -7px;
                         pointer-events: none;
-                        background: url("./../../assets/img/contact/resizer.png") no-repeat scroll right 15px center;
+                        background: url("./../../../assets/img/resizer.png") no-repeat scroll right 15px center;
                         z-index: 2;                        
                     }
 
