--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -24,13 +24,13 @@
             </div>
             <div class="legal-notice">
                 <div>
-                    <a>Legal Notice</a>
+                    <a routerLink="/legal-notice" routerLinkActive="active">Legal Notice</a>
                 </div>
             </div>
         </div>
         <div class="legal-notice-responsiv">
             <div>
-                <a>Legal Notice</a>
+                <a routerLink="/legal-notice" routerLinkActive="active">Legal Notice</a>
             </div>
         </div>
     </div>
