--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -85,13 +85,13 @@
 
         }
 
-        &:active::before {
-            bottom: 0 !important;
-            left: 0 !important;
-            height: 170px !important;
-            width: 600px !important;
-            border: 4px solid black;
-        }
+        // &:active::before {
+        //     bottom: 0 !important;
+        //     left: 0 !important;
+        //     height: 170px !important;
+        //     width: 600px !important;
+        //     border: 4px solid black;
+        // }
 
         a {
             font-size: 16px;
