--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -79,7 +79,7 @@
                         </div>
 
                         <p>I've read the
-                            <a [ngClass]="{'hovered': isHovered}" href="#">privacy
+                            <a [ngClass]="{'hovered': isHovered}"  routerLink="/privacy-policy" routerLinkActive="active">privacy
                                 policy</a>
                             and agree to the processing of my data as outlined.
                         </p>
