style update, legal-notice content, privacy-policy content

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,8 @@ app-navbar {
     z-index: 99;
 }
 
-legal-notice,
+app-legal-notice,
+app-privacy-policy,
 app-footer {
     display: flex;
     justify-content: center;
