--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -175,6 +175,7 @@
         flex-direction: column;
         align-items: center;
         order: 2;
+        text-align: center;
     }
 
     .footer-right {
