--- a/src/app/main-content/portfolio/portfolio.component.scss
+++ b/src/app/main-content/portfolio/portfolio.component.scss
@@ -260,96 +260,6 @@
   }
 }
 
-// @media (max-width: 1645px) {
-  // .project-base {
-  //   height: auto;
-
-  //   &:hover {
-
-  //     .pointer,
-  //     .pointer-reverse {
-  //       height: 4.56vw !important;
-  //       width: 4.56vw !important;
-  //     }
-  //   }
-  // }
-
-  // .image-base {
-  //   &::before {
-  //     border: 0.243vw solid black;
-  //     top: 1.21vw
-  //   }
-  // }
-
-  // .image {
-  //   &::before {
-  //     left: 1.21vw
-  //   }
-  // }
-
-  // .image-reverse {
-  //   &::before {
-  //     right: 1.21vw
-  //   }
-  // }
-
-  // .pointer-base {
-  //   height: 2.91vw;
-  //   width: 2.91vw
-  // }
-
-  // .pointer {
-  //   right: -1.58vw;
-  // }
-
-  // .pointer-reverse {
-  //   left: -1.58vw;
-  // }
-
-  // .text {
-  //   padding-left: 9.12vw;
-  // }
-
-  // .text-reverse {
-  //   padding-right: 9.12vw;
-  // }
-
-  // .count-base {
-  //   font-size: 2.91vw;
-  // }
-
-  // .description-base {
-  //   padding-top: 1.82vw;
-
-  //   h3 {
-  //     font-size: 2.73vw;
-  //     margin-top: 2.73vw;
-  //     margin-bottom: 2.73vw;
-  //   }
-
-  //   span {
-  //     font-size: 1.4vw;
-  //   }
-
-  //   p {
-  //     font-size: 0.97vw;
-  //   }
-  // }
-
-  // .github-link {
-  //   width: 11.49vw;
-  //   height: 4.13vw;
-  //   font-size: 1.4vw;
-
-  //   &:hover {
-  //     width: calc(11.49vw * 1.26);
-  //   }
-
-  //   &:active {
-  //     width: calc(11.49vw * 1.26);
-  //   }
-  // }
-// }
 
 @media (max-width: 1645px) {
 
@@ -503,7 +413,7 @@
   .description-reverse {
     align-items: flex-end;
 
-    p {
+    p, span {
       text-align: right;
     }
   }
@@ -622,5 +532,31 @@
 
   .project-base {
     width: 240px;
+  }
+
+  .image-base {  
+    &::before {
+      top: 10px;
+    }
+  }
+
+  .image {
+    &::before {
+      left: 10px !important;
+    }
+  }
+  
+  .image-reverse {  
+    &::before {
+      right: 10px !important;
+    }
+  }
+
+  .pointer {
+    right: -16px;
+  }
+  
+  .pointer-reverse {
+    left: -16px;
   }
 }
