--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -168,15 +168,15 @@
             10% {
                 opacity: 1.0;
             }
-    
+
             25% {
                 opacity: 0.0;
             }
-    
+
             75% {
                 opacity: 0.0;
             }
-    
+
             90% {
                 opacity: 1.0;
             }
@@ -199,7 +199,9 @@
     .about-img {
 
         img {
-            height: 355px;
+            // height: 355px;
+            width: 99%;
+            height: auto;
         }
     }
 }
