--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -4,7 +4,7 @@ $font-sice-nav: 96px;
 
 
 .nav-container {
-    width: 100vw;
+    width: calc( 100vw - 12px );
     display: flex;
     justify-content: center;
     height: 92px;
@@ -97,72 +97,6 @@ nav {
         text-decoration: none;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-// @mixin border-base($boarder-container-height, $boarder-container-width, $font-sice-nav) {
-//     height: $boarder-container-height;
-//     width: $boarder-container-width;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     position: relative;
-//     cursor: pointer;
-
-//     &::before {
-//         content: attr(href);
-//         position: absolute;
-//         bottom: 0;
-//         left: 0;
-//         border-bottom: 4px solid black;
-//         border-left: 4px solid black;
-//         width: 6.7%;
-//         height: 30.6%;
-//     }
-
-//     a {
-//         font-size: $font-sice-nav;
-//         font-weight: 700;
-//         font-family: Syne;
-//         color: #000000;
-//         text-decoration: none;
-//     }
-// }
-
-// .border {
-//     @include border-base($boarder-container-height, $boarder-container-width, $font-sice-nav);
-// }
-
-// .border-hover {
-//     @include border-base($boarder-container-height, $boarder-container-width, $font-sice-nav);
-
-//     &::before {
-//         animation: border-animation 0.2s ease-out;
-//         animation-fill-mode: forwards;
-//     }
-// }
-
-// .border-active {
-//     @include border-base($boarder-container-height, $boarder-container-width, $font-sice-nav);
-
-//     &::before {
-//         bottom: 0;
-//         left: 0;
-//         height: 100% !important;
-//         width: 100% !important;
-//         border: 4px solid black;
-//     }
-// }
 
 @keyframes border-animation {
     35% {
